// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should render a standard block link 1`] = `
.emotion-2 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: block;
}

.emotion-3:hover .emotion-0,
.emotion-3:focus .emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div>
  <a
    class="emotion-2 emotion-3"
    href="https://www.bbc.com/"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Some link text
    </span>
  </a>
</div>
`;

exports[`Link should render an inline link after passing an inline prop 1`] = `
.emotion-3:hover .emotion-0,
.emotion-3:focus .emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline;
}

<div>
  <a
    class="emotion-2 emotion-3"
    href="https://www.bbc.com/"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Some link text
    </span>
  </a>
</div>
`;

exports[`Link should render an inline link with a lang attribute 1`] = `
.emotion-3:hover .emotion-0,
.emotion-3:focus .emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-2 {
  padding: 0.5rem 0 0.5rem;
  color: #FFFFFF;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: inline;
}

<div>
  <a
    class="emotion-2 emotion-3"
    href="https://www.bbc.com/"
    lang="en-GB"
  >
    <span
      class="emotion-0 emotion-1"
    >
      Some link text
    </span>
  </a>
</div>
`;
